Weather mcp as portable version. Tests